feat: add endpoints for dropping embeddings, projections and recompute
* drop embeddings
* drop projections
* recompute projections
